"""initial schema

Revision ID: adabb9c55a34
Revises: 
Create Date: 2026-07-02 03:57:49.018742
"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa


revision: str = 'adabb9c55a34'
down_revision: Union[str, None] = None
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('targets',
    sa.Column('name', sa.String(length=100), nullable=False),
    sa.Column('host', sa.String(length=255), nullable=False),
    sa.Column('description', sa.Text(), nullable=True),
    sa.Column('is_lab_target', sa.Boolean(), nullable=False),
    sa.Column('is_active', sa.Boolean(), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('id', sa.UUID(), server_default=sa.text('gen_random_uuid()'), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('name')
    )
    op.create_table('scans',
    sa.Column('target_id', sa.UUID(), nullable=False),
    sa.Column('status', sa.Enum('PENDING', 'RUNNING', 'COMPLETED', 'FAILED', 'CANCELLED', name='scan_status'), nullable=False),
    sa.Column('pipeline_run_id', sa.String(length=100), nullable=True),
    sa.Column('triggered_by', sa.String(length=100), nullable=True),
    sa.Column('started_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('finished_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('error_message', sa.Text(), nullable=True),
    sa.Column('id', sa.UUID(), server_default=sa.text('gen_random_uuid()'), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.ForeignKeyConstraint(['target_id'], ['targets.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('reports',
    sa.Column('scan_id', sa.UUID(), nullable=False),
    sa.Column('format', sa.Enum('PDF', 'HTML', 'MARKDOWN', 'JSON', name='report_format'), nullable=False),
    sa.Column('file_path', sa.String(length=500), nullable=False),
    sa.Column('generated_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('generated_by', sa.String(length=100), nullable=True),
    sa.Column('id', sa.UUID(), server_default=sa.text('gen_random_uuid()'), nullable=False),
    sa.ForeignKeyConstraint(['scan_id'], ['scans.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('scan_tasks',
    sa.Column('scan_id', sa.UUID(), nullable=False),
    sa.Column('tool_name', sa.String(length=50), nullable=False),
    sa.Column('status', sa.Enum('PENDING', 'RUNNING', 'COMPLETED', 'FAILED', 'SKIPPED', name='scan_task_status'), nullable=False),
    sa.Column('command', sa.Text(), nullable=True),
    sa.Column('raw_output', sa.Text(), nullable=True),
    sa.Column('raw_output_path', sa.String(length=500), nullable=True),
    sa.Column('started_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('finished_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('error_message', sa.Text(), nullable=True),
    sa.Column('id', sa.UUID(), server_default=sa.text('gen_random_uuid()'), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.ForeignKeyConstraint(['scan_id'], ['scans.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index('ix_scan_tasks_scan_id_tool_name', 'scan_tasks', ['scan_id', 'tool_name'], unique=False)
    op.create_table('services',
    sa.Column('scan_id', sa.UUID(), nullable=False),
    sa.Column('host', sa.String(length=255), nullable=False),
    sa.Column('port', sa.Integer(), nullable=False),
    sa.Column('protocol', sa.String(length=10), nullable=False),
    sa.Column('service_name', sa.String(length=100), nullable=True),
    sa.Column('product', sa.String(length=100), nullable=True),
    sa.Column('version', sa.String(length=100), nullable=True),
    sa.Column('banner', sa.Text(), nullable=True),
    sa.Column('id', sa.UUID(), server_default=sa.text('gen_random_uuid()'), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.ForeignKeyConstraint(['scan_id'], ['scans.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('scan_id', 'host', 'port', 'protocol', name='uq_services_scan_endpoint')
    )
    op.create_table('technologies',
    sa.Column('scan_id', sa.UUID(), nullable=False),
    sa.Column('name', sa.String(length=100), nullable=False),
    sa.Column('version', sa.String(length=100), nullable=True),
    sa.Column('category', sa.String(length=100), nullable=True),
    sa.Column('detected_by', sa.String(length=50), nullable=False),
    sa.Column('confidence', sa.String(length=20), nullable=True),
    sa.Column('id', sa.UUID(), server_default=sa.text('gen_random_uuid()'), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.ForeignKeyConstraint(['scan_id'], ['scans.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('findings',
    sa.Column('scan_id', sa.UUID(), nullable=False),
    sa.Column('scan_task_id', sa.UUID(), nullable=False),
    sa.Column('service_id', sa.UUID(), nullable=True),
    sa.Column('title', sa.String(length=255), nullable=False),
    sa.Column('description', sa.Text(), nullable=True),
    sa.Column('finding_type', sa.String(length=100), nullable=False),
    sa.Column('evidence', sa.Text(), nullable=True),
    sa.Column('confidence', sa.String(length=20), nullable=True),
    sa.Column('cvss_score', sa.Numeric(precision=3, scale=1), nullable=True),
    sa.Column('cvss_vector', sa.String(length=100), nullable=True),
    sa.Column('severity', sa.Enum('INFO', 'LOW', 'MEDIUM', 'HIGH', 'CRITICAL', name='severity_level'), nullable=False),
    sa.Column('id', sa.UUID(), server_default=sa.text('gen_random_uuid()'), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.ForeignKeyConstraint(['scan_id'], ['scans.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['scan_task_id'], ['scan_tasks.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['service_id'], ['services.id'], ondelete='SET NULL'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index('ix_findings_scan_id_severity', 'findings', ['scan_id', 'severity'], unique=False)
    op.create_table('cve_references',
    sa.Column('finding_id', sa.UUID(), nullable=False),
    sa.Column('cve_id', sa.String(length=20), nullable=False),
    sa.Column('cvss_score', sa.Numeric(precision=3, scale=1), nullable=True),
    sa.Column('cvss_vector', sa.String(length=100), nullable=True),
    sa.Column('description', sa.Text(), nullable=True),
    sa.Column('source_url', sa.String(length=500), nullable=True),
    sa.Column('id', sa.UUID(), server_default=sa.text('gen_random_uuid()'), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.ForeignKeyConstraint(['finding_id'], ['findings.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index('ix_cve_references_cve_id', 'cve_references', ['cve_id'], unique=False)
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index('ix_cve_references_cve_id', table_name='cve_references')
    op.drop_table('cve_references')
    op.drop_index('ix_findings_scan_id_severity', table_name='findings')
    op.drop_table('findings')
    op.drop_table('technologies')
    op.drop_table('services')
    op.drop_index('ix_scan_tasks_scan_id_tool_name', table_name='scan_tasks')
    op.drop_table('scan_tasks')
    op.drop_table('reports')
    op.drop_table('scans')
    op.drop_table('targets')
    # ### end Alembic commands ###
